Document border box fix
Attempt to fix border box (horizontal scroll)

--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,9 @@
     clear: both;
 }
 
-body {
+.container, .homespace, .about-me, .pagebody {
     box-sizing: border-box;
-    
+    overflow: hidden;
 }
 
 #home {
